 * Added edit / delete buttons to snippet index and "don't delete" option to confirmation screen, for consistency with pages (Kevin Howbrook)
 * Added support for Markdown shortcuts for inline formatting in rich text editor, e.g. `**` for bold, `_` for italic, etc. (Thibaud Colas)
 * Added name attributes to all built-in page action menu items (LB (Ben Johnston))
 * Fix: Set `SERVER_PORT` to 443 in `Page.dummy_request()` for HTTPS sites (Sergey Fedoseev)
 * Fix: Include port number in `Host` header of `Page.dummy_request()` (Sergey Fedoseev)
 * Fix: Validation error messages in `InlinePanel` no longer count towards `max_num` when disabling the 'add' button (Todd Dembrey, Thibaud Colas)
 * Fix: Rich text to contentstate conversion now ignores stray closing tags (frmdstryr)
 * Fix: Escape backslashes in `postgres_search` queries (Hammy Goonan)
 * Fix: Parent page link in page chooser search results no longer navigates away (Asanka Lihiniyagoda, Sævar Öfjörð Magnússon)
 * Fix: `routablepageurl` tag now correctly omits domain part when multiple sites exist at the same root (Gassan Gousseinov)
 * Fix: Added missing collection column specifier on document listing template (Sergey Fedoseev)
 * Fix: Page Copy will now also copy ParentalManyToMany field relations (LB (Ben Johnston))
 * Fix: Admin HTML header now includes correct language code (Matt Westcott)
 * Fix: Unclear error message when saving image after focal point edit (Hugo van den Berg)
 * Fix: `send_mail` now correctly uses the `html_message` kwarg for HTML messages (Tiago Requeijo)
 * Fix: Page copying no longer allowed if page model has reached its `max_count` (Andy Babic)
 * Fix: Don't show page type on page chooser button when multiple types are allowed (Thijs Kramer)
 * Fix: Make sure page chooser search results correspond to the latest search by canceling previous requests (Esper Kuijs)